# Iqraly

./: README.md  io.github.lexeep.Iqraly.json~  meson.build
data/: io.github.lexeep.Iqraly.desktop.in  io.github.lexeep.Iqraly.gschema.xml  io.github.lexeep.Iqraly.metainfo.xml.in  io.github.lexeep.Iqraly.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: io.github.lexeep.Iqraly.data.gresource.xml  io.github.lexeep.Iqraly.src.gresource.xml  main.js  meson.build  style.css  window.js  window.ui
